[tool.poetry]
name = "github"
version = "0.1.0"
description = ""
authors = ["Paulo Nuin <nuin@genedrift.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
lxml = "^5.2.2"
duckdb = "^1.0.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
gql = "^3.5.0"
whoosh = "^2.7.4"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
